--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </main>
         <section id="about" style="max-width: 100%; height: 100vh; background-color: black; color: white; padding: 20px; box-sizing: border-box; overflow-x: hidden;">
             <h1>About</h1>
-            <p>This is the About section content.</p>
+            <p>Apakah anda ingin biji kopi dengan kualitas bagus ?</p>
         </section>
         <section id="product" style="max-width: 100%; height: 100vh; background-color: black; color: white; padding: 20px; box-sizing: border-box; overflow-x: hidden;">
             <h1>Product</h1>
