--- a/Pages/shipping-procedure.html
+++ b/Pages/shipping-procedure.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <nav class="navbar">
-            <a href="../Index/Index.html">
+            <a href="../index.html">
                 <img src="../IMG/Logo-ANG/LOGO-CV-ANG-horizontal-putih-1-2048x404.png" alt="Logo" class="navbar-logo"/>
             </a>
             <div class="navbar-toggle" id="mobile-menu">
@@ -19,7 +19,7 @@
             </div>
             <div class="navbar-menu" id="navbar-menu">
                 <ul>
-                    <li><a href="../Index/Index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="product.html">Product</a></li>
                     <li><a href="shipping-procedure.html">Shipping procedure</a></li>
                     <li><a href="supply-chain.html">Supply chain</a></li>
