--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-menu" id="navbar-menu">
                 <ul>
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Pages/product.html">Product</a></li>
                     <li><a href="Pages/shipping-procedure.html">Shipping procedure</a></li>
                     <li><a href="Pages/supply-chain.html">Supply chain</a></li>
@@ -35,7 +35,7 @@
     
         </header>
         <main class="content-section" style="min-height: 100vh;">
-            <img src="../IMG/Object HouseBlends/Background/element-bakcground-black-animation.png" alt="Background Element" class="background-element"/>
+            <img src="IMG/Object HouseBlends/Background/element-bakcground-black-animation.png" alt="Background Element" class="background-element"/>
         </main>
         <section id="about" style="max-width: 100%; height: 100vh; background-color: black; color: white; padding: 20px; box-sizing: border-box; overflow-x: hidden;">
             <h1>About</h1>
